--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-indicatif = "0.18.0"
+indicatif = { version = "0.18.0", features = ["rayon"] }
 num-traits = "0.2.19"
 rand = "0.9.2"
+rayon = "1.11.0"
